Constructed format game starts with LobbyPlayerAiSimpleFactory as the AI